CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc1

	- The pdftops filter did not print the contents of
	  textual form elements, making it impossible to print a
	  filled-in form (STR #663)
	- Integrated the MacOS X/Darwin USB backend into the
	  CUPS baseline (STR #661)
	- The USB backend incorrectly reported "media tray
	  empty" (STR #660)
	- The scheduler did not use a case-insensitive
	  comparison when checking for group membership, which
	  caused problems with Win9x clients printing via SAMBA
	  (STR #647)
	- The scheduler did not report the addresses associated
	  with certain network errors, making troubleshooting
	  difficult (STR #648, #649)
	- The cupstestppd program did not allow a default choice
	  of "Unknown" as required by the PPD spec (STR #651)
	- The select() buffers are now allocated to be at least
	  as large as sizeof(fd_set) (STR #639)
	- The LPD backend now supports overriding the print job
	  username via the device URI (STR #631)
	- The scheduler did not handle an unknown MIME type when
	  checking for a CGI script (STR #603)
	- Added a timeout optimization to the scheduler's main
	  loop to allow CUPS to sleep more of the time (STR
	  #629)
	- The USB backend now retries printing to devices of the
	  form "usb://make/model" if any USB port shows up as
	  "busy" (STR #617)
	- The httpGetHostByName() function did not range check
	  IP address values (STR #608)
	- The httpUpdate() function could return HTTP_ERROR
	  instead of the HTTP status if the server closed the
	  connection before the client received the whole
	  response (STR #611)
	- The LPD mini-daemon did not allow the administrator to
	  force banner pages on (STR #605)
	- Added PAM support for Darwin/MacOS X (STR #550)
	- The web interface now provides a "Set As Default"
	  button to set the default printer or class on a server
	  (STR #577)
	- The HTTP authentication cache was broken (STR #517)
	- The cupstestppd utility now fails PPD files that have